<resources>
    <string name="app_name">BaratoNeh</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="copyright">Copyright &#169; 2017</string>
    <string name="email_address_fernando">fernandosecastro@gmail.com</string>
    <string name="email_address_danilo">danilotecvip@gmail.com</string>
    <string name="parse_application_id">V0c7q2d6VCVuc0LXZmk3ZZbUjI4UMhIrgWmekZxP</string>
    <string name="parse_client_key">VjtLo0qel4L3hpWSModBkBB4oPEUUEZHikHOVo7z</string>
    <string name="more_apps">https://play.google.com/store/apps/developer</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="no_phone">Seu dispositivo não suporta o aplicativo</string>
    <string name="no_internet">Por favor, ative a conexão a internet e abra o APP</string>
    <string name="category_list">Escolha a Categoria</string>
    <string name="search">Busca Menu</string>
    <string name="detail">Detalhes</string>
    <string name="add">Adicionar ao meu pedido</string>
    <string name="share_btn">Compartilhar isto</string>
    <string name="share">Compartilhar</string>
    <string name="contact">Contactar-nos</string>
    <string name="callus">Ligue-nos</string>
    <string name="alert">Falha ao conectar a internet!</string>
    <string name="not_found">Não encontrado!</string>
    <string name="number_order">Numero da ordem : </string>
    <string name="order">Ordem</string>
    <string name="my_order">detalhes da ordem</string>
    <string name="total_order">Total Ordem :</string>
    <string name="clear_order">Limpar toda a ordem</string>
    <string name="clear_all_order">Você realmente quer excluir os itens da Ordem?</string>
    <string name="clear_one_order">Você quer limpar a ordem?</string>
    <string name="db_exist_alert">Deseja remover seu pedido anterior?</string>
    <string name="confirm">Confirmar</string>
    <string name="reservation">Reservar</string>
    <string name="your_name">Seu Nome</string>
    <string name="address">Seu Endereço</string>
    <string name="city">Sua Cidade</string>
    <string name="province">Seu Vairro</string>
    <string name="email">Seu Email</string>
    <string name="number_of_people">Numero de pessoas</string>
    <string name="date">Insira a Data</string>
    <string name="time">Insira o horario</string>
    <string name="phone_number">Numero do Telefone</string>
    <string name="order_list">Lista de ordens</string>
    <string name="send_reservation">Enviar</string>
    <string name="form_alert">Please, complete the form first.</string>
    <string name="sending_alert">Sending data. Please wait &#8230;</string>
    <string name="ok_alert">Your Order has been successfully sent.</string>
    <string name="failed_alert">Your Order has not been sent.</string>
    <string name="no_order">Your Cart is Empty, Please Order first.</string>
    <string name="check_order_later">Check if you want to order later</string>
    <string name="order_later">#Order later</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="no_order_menu">No order</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="add_comment">Comentário (Opcional)</string>
    <string name="menu_settings">Configurações</string>
    <string name="app_info">Informação do App </string>
    <string name="main_menu">Menu</string>
    <string name="title_activity_home">Home</string>
    <string name="more">Mais Apps</string>
    <string name="rate">Rate Apps</string>
    <string-array name="main_menu_list">
        <item>List Menu</item>
        <item>Your Order</item>
        <item>Confirmation</item>
    </string-array>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="menu_product">Produtos</string>
    <string name="menu_cart">Carrinho</string>
    <string name="menu_empresa">Empresa</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_info">Informações</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_contact">Contato</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Empresa</item>
        <item>Produtos</item>
        <item>Carrinho</item>
        <item>Checkout</item>
        <item>Perfil</item>
        <item>Informações</item>
        <item>Sobre</item>
        <item>Share</item>
        <item>Contato</item>
        <item>Sair</item>
    </string-array>
    <string name="profile_tab1">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="profile_tab2">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="information_tab1">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="information_tab2">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="information_tab3">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="success_order">
		Thankyou very much, Your Order has been successfully sent.
		\n\nLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
</resources>